test/types/coerce/diten/test_uint64_op_int_error.good
test_uint64_op_int_error.chpl:4: error: ambiguous call '**(uint(64), int(64))'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: candidates are: **(a: real(32), b: real(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 **(a: real(64), b: real(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 **(a: complex(64), b: complex(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 **(a: complex(128), b: complex(128))
